bug with z-index in dropdown fixed

--- a/src/blocks/dropdown/dropdown.scss
+++ b/src/blocks/dropdown/dropdown.scss
@@ -53,7 +53,7 @@
     display: none;
     width: 100%;
     position: absolute;
-    z-index: 1;
+    z-index: 3;
 
     background: white;
     border: 1px solid $dark-50;
